Same Name bug fixed, covered css resolved

--- a/front-end/src/components/OwnerSideReviewDetails/OwnersideReviewDetails.css
+++ b/front-end/src/components/OwnerSideReviewDetails/OwnersideReviewDetails.css
@@ -15,7 +15,7 @@
     margin-top:-5px;
 }
 
-.form-control{
+.form-contro{
     margin: 20px;
     width: calc(100% - 40px);
 }
