--- a/front-end/src/components/signUp/CustomerSignUp.css
+++ b/front-end/src/components/signUp/CustomerSignUp.css
@@ -37,16 +37,6 @@ label {
   margin-bottom: 5px;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='password'] {
-  width: 100%;
-  padding: 8px 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 14px;
-}
-
 button[type='submit'] {
   width: 100%;
   padding: 10px;
